crates/pcb-zen-core/tests/snapshots/component__component_with_manufacturer.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "test_comp",
                    footprint: "test_footprint",
                    prefix: "U",
                    connections: {
                        "in": FrozenValue(
                            Net {
                                name: "in",
                                id: "<ID>",
                            },
                        ),
                        "out": FrozenValue(
                            Net {
                                name: "out",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "in",
                                "2": "out",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
