crates/pcb-zen-core/tests/snapshots/component__component_with_symbol.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "I2C_Device",
                    footprint: "SOIC-8",
                    prefix: "U",
                    connections: {
                        "GND": FrozenValue(
                            Net {
                                name: "GND",
                                id: "<ID>",
                            },
                        ),
                        "SCL": FrozenValue(
                            Net {
                                name: "SCL",
                                id: "<ID>",
                            },
                        ),
                        "SDA": FrozenValue(
                            Net {
                                name: "SDA",
                                id: "<ID>",
                            },
                        ),
                        "VDD": FrozenValue(
                            Net {
                                name: "VDD",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "symbol_name": FrozenValue(
                            "I2C",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: Some(
                                "I2C",
                            ),
                            pins: {
                                "1": "SCL",
                                "2": "SDA",
                                "3": "VDD",
                                "4": "GND",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
