crates/pcb-zen-core/tests/snapshots/component__current_module_path_nested_visible.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
Root module depth: 0
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
    ChildInstance: Module {
        path: ChildInstance,
        source: "/Child.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R2",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "A",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "B",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "module_depth": FrozenValue(
                            1,
                        ),
                        "module_path": FrozenValue(
                            "[\"ChildInstance\"]",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
    ChildInstance.GrandChildInstance: Module {
        path: ChildInstance.GrandChildInstance,
        source: "/GrandChild.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "A",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "B",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "module_depth": FrozenValue(
                            2,
                        ),
                        "module_path": FrozenValue(
                            "[\"ChildInstance\", \"GrandChildInstance\"]",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
