crates/pcb-zen-core/tests/snapshots/component__current_module_path_root.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
Root module path: []
Root path length: 0
Is root: True
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
