crates/pcb-zen-core/tests/snapshots/component__current_module_path_visible.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
Root module path: []
Root is_root: True
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R2",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "A",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "B",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "is_root": FrozenValue(
                            StarlarkBool(
                                true,
                            ),
                        ),
                        "module_depth": FrozenValue(
                            0,
                        ),
                        "module_path": FrozenValue(
                            "[]",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
    ChildInstance: Module {
        path: ChildInstance,
        source: "/Child.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "A",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "B",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "is_root": FrozenValue(
                            StarlarkBool(
                                false,
                            ),
                        ),
                        "module_depth": FrozenValue(
                            1,
                        ),
                        "module_path": FrozenValue(
                            "[\"ChildInstance\"]",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
