crates/pcb-zen-core/tests/snapshots/component__interface_net_incompatible.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
Error: Module.zen:8:1-16:2 Pin 'in' must be connected to a Net, got InterfaceValue
