crates/pcb-zen-core/tests/snapshots/component__module_schematic_invalid.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
Error: test.zen:7:1-11:2 schematic parameter must be "collapse" or "embed", got "invalid_value"
